samples/_failures_safe/1761366436_5206ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f45c821.c: In function ‘main’:
./samples/SAFE/__tmp_8f45c821.c:150:16: error: missing terminating " character
  150 |         printf("Invalid columns for matrix 1\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8f45c821.c:150:9: error: expected expression at end of input
  150 |         printf("Invalid columns for matrix 1\n
      |         ^~~~~~
./samples/SAFE/__tmp_8f45c821.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8f45c821.c:150:9: error: expected declaration or statement at end of input
